# rust-project

./: .gitignore  LICENSE  README.md  package-lock.json
taskaroo-dashboard/: package-lock.json  package.json
taskaroo-dashboard/public/: index.html
taskaroo-dashboard/src/: App.css  App.js  App.test.js  index.css  index.js  reportWebVitals.js  setupTests.js
taskaroo-dashboard/src/components/: BinauralBeats.js  BotPopup.js  Calendar.js  Categories.js  Comments.js  FocusIcon.js  FocusTimer.js  Links.js  Pomodoro.js  Sidebar.js  TaskList.js  TaskPopup.js  TrackingList.js  VoiceAssistantIcon.js
taskaroo-dashboard/src/pages/: AuthForm.js  Dashboard.js  Goals.js  MyTasks.js  Settings.js  WelcomePage.js
taskaroo-dashboard/src/styles/: AuthForm.css  BinauralBeats.css  BotPopup.css  Calendar.css  Categories.css  Comments.css  Dashboard.css  FocusTimer.css  Goals.css  Links.css  MyTasks.css  Pomodoro.css  Settings.css  Sidebar.css  TaskList.css  TaskPopup.css  TrackingList.css  VoiceAssistantIcon.css  WelcomePage.css
taskbar-backend/: Cargo.toml
taskbar-backend/src/: main.rs
