[package]
name = "taskbar-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"         # or the latest version
actix-cors = "0.6"      # or the latest version
chrono = "0.4"          # or the latest version
serde = { version = "1", features = ["derive"] }
serde_json = "1"        # Optional, for JSON serialization
uuid = { version = "1", features = ["v4", "serde"] }


